Fix approvals responsive wrapping on mobile
Fix https://gitlab.com/gitlab-org/gitlab-ee/issues/3333

--- a/app/assets/stylesheets/pages/merge_requests.scss
+++ b/app/assets/stylesheets/pages/merge_requests.scss
@@ -715,13 +715,16 @@
 .approvals-footer {
   display: flex;
 
-  .approvers-prefix,
-  .approvers-list {
+  .approvers-prefix {
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
   }
 
   .approvers-list {
+    display: flex;
+    align-items: center;
+
     .link-to-member-avatar:not(:first-child) {
       img {
         margin-left: 0;
